fastapi-graphql-oauth/k8s/argo-rollouts/bluegreen/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql-todo-active
  namespace: graphql-todo
spec:
  type: ClusterIP
  selector:
    app: graphql-todo
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: graphql-todo-preview
  namespace: graphql-todo
spec:
  type: ClusterIP
  selector:
    app: graphql-todo
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
